[gd_scene load_steps=4 format=3 uid="uid://dmlmly071fp65"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5pvyx"]
[ext_resource type="Texture2D" uid="uid://bgh7ibydcogs7" path="res://graphics/tiny-spaceships/tiny_ship5.png" id="1_s8hrs"]
[ext_resource type="AudioStream" uid="uid://kh58jsufcvxk" path="res://audio/laser-104024.mp3" id="3_5fff3"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_5pvyx")

[node name="PlayerImage" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_s8hrs")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-3, -13, 3, -13, 7, -4, 16, 7, 7, 13, 0, 10, -6, 13, -16, 8, -6, -5)

[node name="LaserStartPos" type="Marker2D" parent="."]
position = Vector2(0, -21)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5fff3")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_cooldown_timer_timeout"]
